# montre-tui

./: .gitignore  Cargo.toml  README.md
crates/: cursor.rs  main.rs  query.rs  theme.rs
crates/montre-kwic/: Cargo.toml  README.md
crates/montre-kwic/src/: daemon_access.rs  main.rs  page.rs  query_bar.rs  render.rs
crates/montre-reader/: Cargo.toml  README.md
crates/montre-reader/src/: cursor.rs  daemon_access.rs  main.rs  render.rs
crates/montre-tui-core/: Cargo.toml
crates/montre-tui-core/src/: key_hint.rs  lib.rs  overlay.rs  palette.rs  runtime.rs  sentence_source.rs  status_bar.rs  terminal.rs  theme.rs
crates/ui/: kwic_pane.rs  mod.rs
docs/: DEVELOPMENT.md
src/: app.rs  keyhints.rs  kwic.rs  main.rs  reader.rs  slots.rs  theme.rs
src/ui/: hints_bar.rs  info_bar.rs  kwic_pane.rs  mod.rs  query_bar.rs  reader_pane.rs
