[package]
name = "montre-tui"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Terminal UI for the Montre corpus query engine"

[dependencies]
montre-core = { path = "../049300/crates/montre-core" }
montre-index = { path = "../049300/crates/montre-index" }
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
