[workspace]
resolver = "2"
members = [
	"crates/montre-tui-core",
	"crates/montre-reader",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
montre-daemon = { path = "../049300/crates/montre-daemon" }
montre-tui-core = { path = "crates/montre-tui-core" }
