[package]
name = "montre-kwic"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "montre-kwic"
path = "src/main.rs"

[dependencies]
montre-tui-core.workspace = true
montre-daemon.workspace = true
ratatui.workspace = true
crossterm.workspace = true
clap.workspace = true
anyhow.workspace = true
